--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@ p {
 </head>
 <body>
 
+  <meta property="og:title" content="영화 그녀에게 - 사랑에 대한 집착 혹은 헌신?">
+  <meta property="og:image" content="http://blogthumb2.naver.net/20160724_225/ds1pob_14693203455573tHdz_PNG/영화그녀에게2002.png?type=w2">
+  <meta property="og:description" content="2003년 혹은 2004년? 너무 오래되어서 정확한 년도를 지금은 기억 못하지만 영화의 내용만큼은 시간이 지나...">
+  <meta property="og:url" content="http://blog.naver.com/ds1pob/220770206279">
+
+
+  <meta property="og:type" content="article">
+  <meta property="og:article:author" content="네이버 블로그 | &quot;너만 주인공이냐? 나도 주인공이다!&quot;">
+  <meta property="og:site_name" content="네이버 블로그 | &quot;너만 주인공이냐? 나도 주인공이다!&quot;">
+  <meta property="naverblog:nickname" content="초심">
+  <meta property="naverblog:profile_image" content="http://blogpfthumb.phinf.naver.net/20151103_174/ds1pob_1446515219562gsCYK_JPEG/53996b6064d1138b125091881548b9ea.jpg">
+  <meta property="me2:post_body" content="&quot;영화 그녀에게 - 사랑에 대한 집착 혹은 헌신?&quot;:http://blog.naver.com/ds1pob/220770206279">
+  <meta property="me2:post_tag" content="네이버블로그 &quot;너만 주인공이냐? 나도 주인공이다!&quot;">
+
 <p id="demo"></p>
 
 <script>
@@ -44,7 +58,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-<meta property = "og:title" content = "test">
+https://mintde.github.io/towonyoung/.
 
 </body>
 </html>
