--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@ p {
 </head>
 <body>
 
-  <meta property="og:url"                content="http://gocoder.tistory.com" />
-<meta property="og:type"               content="website" />
-<meta property="og:title"              content="고코더의 IT Express" />
-<meta property="og:description"        content="모든 IT 정보를 " />
-<meta property="og:image"              content="https://t1.daumcdn.net/cfile/tistory/234774445960F69422" />
+  <meta property="og:title" content="네이버">
 
 
 출처: https://gocoder.tistory.com/315 [고코더 IT Express]
