--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <meta property="og:url"                content="http://gocoder.tistory.com" />
+  <meta property="og:type"               content="website" />
+  <meta property="og:title"              content="고코더의 IT Express" />
+  <meta property="og:description"        content="모든 IT 정보를 " />
+  <meta property="og:image"              content="https://t1.daumcdn.net/cfile/tistory/234774445960F69422" />
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 p {
@@ -11,11 +18,6 @@ p {
 </style>
 </head>
 <body>
-
-  <meta property="og:title" content="네이버">
-
-
-출처: https://gocoder.tistory.com/315 [고코더 IT Express]
 
 <p id="demo"></p>
 
