--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <meta property="og:url" content="http://gocoder.tistory.com" />
+  <meta property="og:url" content="https://mintde.github.io/towonyoung/." />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="고코더의 IT Express" />
   <meta property="og:description" content="모든 IT 정보를 " />
