--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta property="og:url" content="https://mintde.github.io/towonyoung/." />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="고코더의 IT Express" />
-  <meta property="og:description" content="모든 IT 정보를 " />
+  <meta property="og:title" content="test" />
+  <meta property="og:description" content="test" />
   <meta property="og:image" content="https://t1.daumcdn.net/cfile/tistory/234774445960F69422" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
