--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <meta property="og:url" content="https://mintde.github.io/towonyoung/." />
+  <meta property="og:url" content="https://mintde.github.io/towonyoung/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="test" />
   <meta property="og:description" content="test" />
