--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta property="og:url" content="https://mintde.github.io/towonyoung/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="test" />
-  <meta property="og:description" content="test" />
+  <meta property="og:description" content="네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요">
   <meta property="og:image" content="https://t1.daumcdn.net/cfile/tistory/234774445960F69422" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
