--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="너의 입대는。"/>
   <meta property="og:description" content="원용이의 군대 남은시간~">
-  <meta property="og:image" content="https://raw.githubusercontent.com/MinTDe/Towy/master/army2.png" />
+  <meta property="og:image" content="https://postfiles.pstatic.net/MjAxOTAzMDNfMTgy/MDAxNTUxNTkwMzI5MDY1.qDnrWvbVl2D8fjoHiNcMyrBYXpjBA4UvBC-QKu4zRi4g.UaW59mmUAKh1zIQwZ0ggi5Gbwyi6OnCLo-l5EJBxVbog.PNG.water9098/army2.png?type=w580" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 p {
